// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package objectengine.master.v1;

message IngestRequest {
  string tenant = 1;
  IngestRequestUnion request = 2;
}

message IngestResponse { IngestResponseUnion response = 1; }

message IngestRequestUnion {
  oneof request {
    BeginIngestionRequest begin_ingestion = 1;
    CommitIngestionRequest commit_ingestion = 2;
    AllocateFileNameRequest allocate_file_name = 3;
  }
}

message IngestResponseUnion {
  oneof response {
    BeginIngestionResponse begin_ingestion = 1;
    CommitIngestionResponse commit_ingestion = 2;
    AllocateFileNameResponse allocate_file_name = 3;
  }
}

message BeginIngestionRequest {}

message BeginIngestionResponse {
  // A unique identifier of this ingestion.
  string token = 1;
}

message CommitIngestionRequest {
  string token = 1;
  BulkLoadOutput bulkload = 2;
}

message CommitIngestionResponse {}

message AllocateFileNameRequest { uint64 count = 1; }

message AllocateFileNameResponse { repeated string names = 1; }

message BulkLoadOutput { repeated BulkLoadOutputFileDesc files = 1; }

message BulkLoadOutputFileDesc {
  string bucket = 1;
  string file_name = 2;
  uint64 file_size = 3;
  bytes lower_bound = 4;
  bytes upper_bound = 5;
}
